Bug 72652 - Assert from power saving interface for offline accounts
Summary: Assert from power saving interface for offline accounts
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: mission-control (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2013-12-12 23:13 UTC by John Brooks
Modified: 2014-01-22 11:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch (1.08 KB, patch)
2013-12-12 23:13 UTC, John Brooks
Details | Splinter Review

Description John Brooks 2013-12-12 23:13:47 UTC
Created attachment 90685 [details] [review]
Patch

When a connection supporting the PowerSaving interface has disconnected, changes to the power saving state cause an assertion:

GLIB CRITICAL ** tp-glib - tp_cli_connection_interface_power_saving_call_set_power_saving: assertion `TP_IS_CONNECTION (proxy)' failed

This is fixed by the attached patch.
Comment 1 Guillaume Desmottes 2013-12-27 11:10:56 UTC
Comment on attachment 90685 [details] [review]
Patch

Review of attachment 90685 [details] [review]:
-----------------------------------------------------------------

::: src/mcd-connection.c
@@ +1685,1 @@
>      tp_cli_connection_interface_power_saving_call_set_power_saving (priv->tp_conn, -1,

Simon: shouldn't we check if the proxy has been invalidated as well?
Comment 2 Simon McVittie 2014-01-07 17:31:15 UTC
(In reply to comment #1)
> Simon: shouldn't we check if the proxy has been invalidated as well?

There's no real need. The method call will fail, but we ignore any error anyway.

(Also, the variable gets set to NULL in response to invalidation; otherwise, John wouldn't see this bug.)
Comment 3 Simon McVittie 2014-01-07 17:47:32 UTC
Fixed in git for 5.17.0 (not in 5.16 yet).
Comment 4 Simon McVittie 2014-01-22 11:58:18 UTC
Fixed in git for 5.16.1, too.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.